# python_csv_editor

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
data/: sample.csv  sample_melt.csv
logic/: __init__.py  csv_convert.py
src/python_csv_editor/: __init__.py
